--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             "alan",
             "lisa",
             "dana",
+            "cora",
             "gizmo",
             "fiona",
             "ranger",
@@ -248,6 +249,15 @@
             "asher",
             "ezra",
             "quentin",
+            "hazel",
+            "brynlee",
+            "cambryn",
+            "susan",
+            "leo",
+            "scarlett",
+            "audrey",
+            "lily",
+            "cyrus",
         ];
 
         words_nouns = [
